log
Thu Mar 17 22:50:27 UTC 2022: 
 tests:  0|6
total_score: 0/70
95438ce
Thu Mar 17 23:35:33 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=0;
       ^~
list.c:34:10: error: ‘S’ undeclared (first use in this function)
   return S;
          ^
list.c:34:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
15c87a5
Thu Mar 17 23:37:56 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->head=NULL;
       ^~
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   List->tail=NULL;
       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=NULL;
       ^~
list.c:36:10: error: ‘S’ undeclared (first use in this function)
   return S;
          ^
list.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
20378c7
Thu Mar 17 23:38:08 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->head=NULL;
       ^~
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   List->tail=NULL;
       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=NULL;
       ^~
list.c:36:10: error: expected expression before ‘List’
   return List;
          ^~~~
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8e7030c
Thu Mar 17 23:38:19 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘.’ token
   List.head=NULL;
       ^
list.c:34:7: error: expected identifier or ‘(’ before ‘.’ token
   List.tail=NULL;
       ^
list.c:35:7: error: expected identifier or ‘(’ before ‘.’ token
   List.current=NULL;
       ^
list.c:36:10: error: expected expression before ‘List’
   return List;
          ^~~~
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b7eaab2
Thu Mar 17 23:38:49 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
e2cb9af
Sat Mar 19 23:13:32 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:7: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list.head = dato;
       ^
       ->
list.c:42:7: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list.current = list.head;
       ^
       ->
list.c:42:22: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list.current = list.head;
                      ^
                      ->
list.c:43:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return dato;
          ^~~~
cc1: all warnings being treated as errors
Compilation failed
6d62010
Sat Mar 19 23:13:43 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->head = dato;
              ^
list.c:42:23: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list->current = list.head;
                       ^
                       ->
list.c:43:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return dato;
          ^~~~
cc1: all warnings being treated as errors
Compilation failed
b5d0d97
Sat Mar 19 23:31:52 UTC 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:22: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
     return list->head.data;
                      ^
                      ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a8c8d5a
Sat Mar 19 23:32:43 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:42:20: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
   return list->head.data;
                    ^
                    ->
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
567d157
Sat Mar 19 23:35:20 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
45291f1
Sat Mar 19 23:42:42 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:48:23: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
   return list->current.next->data;
                       ^
                       ->
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
2472d3a
Sat Mar 19 23:47:14 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2269e4e
Sat Mar 19 23:50:09 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ad2b443
